k8s-manifests/deployment-v1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: product-v1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
      - name: product-api
        image: bhoomi1311/springboot-product-api:v1.0.0
        imagePullPolicy: Always
        ports:
        - containerPort: 9191
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "256Mi"
            cpu: "250m"
        livenessProbe:
          httpGet:
            path: /health
            port: 9191
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 9191
          initialDelaySeconds: 5
          periodSeconds: 10
        # env:  # Uncomment and use if environment variables are needed
        # - name: ENV_NAME
        #   value: "example"
