k8s-manifests/deployment-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  namespace: product-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-api
  template:
    metadata:
      labels:
        app: product-api
    spec:
      containers:
        - name: product-api
          image: bhoomi1311/springboot-product-api:v2.0.0
          imagePullPolicy: Always
          ports:
            - containerPort: 9191
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 9191
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 9191
            initialDelaySeconds: 5
            periodSeconds: 10
          # env:
          # - name: EXAMPLE_ENV
          #   value: "value"
