k8s-manifests/service-v1-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: product-v1-1
spec:
  selector:
    app: product-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9191
