k8s-manifests/service-v1.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: product-v1
spec:
  selector:
    app: product-api
  ports:
    - protocol: TCP
      port: 80       # External port
      targetPort: 9191   # Internal container port
  type: ClusterIP
