k8s-manifests/service-v2.yaml
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: product-v2
spec:
  selector:
    app: product-api
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9191
